Update tox.ini && conf.py file
Performed-by: gitea/infra/otc-metadata/tools/generate_doc_confpy.py

--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,8 @@ commands =
   {[testenv:json-api-ref]commands}
   {[testenv:umn]commands}
   {[testenv:json-umn]commands}
+  {[testenv:mycredential]commands}
+  {[testenv:json-mycredential]commands}
 
 [testenv:docs-pdf]
 deps = -r{toxinidir}/doc/requirements.txt
@@ -47,6 +49,7 @@ commands =
   mkdir -p doc/build/pdf
   {[testenv:api-ref-pdf-docs]commands}
   {[testenv:umn-pdf-docs]commands}
+  {[testenv:mycredential-pdf-docs]commands}
 
 
 # HTML version
@@ -137,4 +140,45 @@ commands =
   make -C umn/build/pdf
   mkdir -p doc/build/pdf
   cp umn/build/pdf/iam-umn.pdf doc/build/pdf/
+
+
+# HTML version
+[testenv:mycredential]
+deps = -r{toxinidir}/doc/requirements.txt
+allowlist_externals =
+  cp
+  mkdir
+commands =
+  sphinx-build -W --keep-going -b html doc/mycredential/source doc/build/html/mycredential
+
+# Json version (for search)
+[testenv:json-mycredential]
+deps = -r{toxinidir}/doc/requirements.txt
+allowlist_externals =
+  cp
+  mkdir
+  sh
+commands =
+  sphinx-build -W --keep-going -b json doc/mycredential/source doc/build/json/mycredential
+  # Drop data useless for the search - wrap it also with sh/xargs due to bugs
+  # in tox
+  sh -c "find doc/build/json -type d -and '(' -name '_images' -or -name '_static' -or -name '_sources' ')' -print0 | xargs -0 rm -rf"
+
+# PDF version
+[testenv:mycredential-pdf-docs]
+deps = -r{toxinidir}/doc/requirements.txt
+allowlist_externals =
+  rm
+  mkdir
+  make
+  bash
+  cp
+commands =
+  rm -rf doc/mycredential/build/pdf
+  sphinx-build -W --keep-going -b latex doc/mycredential/source doc/mycredential/build/pdf/
+  bash -c "for f in doc/mycredential/build/pdf/*.gif; do convert $f $\{f/%gif/png\}; done || true"
+  bash -c "for f in doc/mycredential/build/pdf/*.tex; do sed -iorig 's/\.gif//g' $f; done"
+  make -C doc/mycredential/build/pdf
+  mkdir -p doc/build/pdf
+  cp doc/mycredential/build/pdf/iam-mycredential-guide.pdf doc/build/pdf/
 
