--- a/tox.ini
+++ b/tox.ini
@@ -34,10 +34,12 @@ allowlist_externals =
 commands =
   rm -rf doc/build/html doc/build/doctrees
   sphinx-build -a -E -W -d doc/build/doctrees -b html doc/source doc/build/html
-  {[testenv:api-ref]commands}
-  {[testenv:json-api-ref]commands}
+  {[testenv:permissions]commands}
+  {[testenv:json-permissions]commands}
   {[testenv:umn]commands}
   {[testenv:json-umn]commands}
+  {[testenv:api-ref]commands}
+  {[testenv:json-api-ref]commands}
   {[testenv:mycredential]commands}
   {[testenv:json-mycredential]commands}
 
@@ -51,39 +53,36 @@ allowlist_externals =
   cp
 commands =
   mkdir -p doc/build/pdf
-  {[testenv:api-ref-pdf-docs]commands}
+  {[testenv:permissions-pdf-docs]commands}
   {[testenv:umn-pdf-docs]commands}
+  {[testenv:api-ref-pdf-docs]commands}
   {[testenv:mycredential-pdf-docs]commands}
 
 
 # HTML version
-[testenv:api-ref]
+[testenv:permissions]
 deps = -r{toxinidir}/doc/requirements.txt
 allowlist_externals =
   cp
   mkdir
 commands =
-  sphinx-build -W --keep-going -b html api-ref/source doc/build/html/api-ref
-  mkdir -p api-ref/build/html
-  cp -av doc/build/html/api-ref api-ref/build/html
+  sphinx-build -W --keep-going -b html doc/permissions/source doc/build/html/permissions
 
 # Json version (for search)
-[testenv:json-api-ref]
+[testenv:json-permissions]
 deps = -r{toxinidir}/doc/requirements.txt
 allowlist_externals =
   cp
   mkdir
   sh
 commands =
-  sphinx-build -W --keep-going -b json api-ref/source doc/build/json/api-ref
+  sphinx-build -W --keep-going -b json doc/permissions/source doc/build/json/permissions
   # Drop data useless for the search - wrap it also with sh/xargs due to bugs
   # in tox
   sh -c "find doc/build/json -type d -and '(' -name '_images' -or -name '_static' -or -name '_sources' ')' -print0 | xargs -0 rm -rf"
-  mkdir -p api-ref/build/json
-  cp -av doc/build/json/api-ref api-ref/build/json
 
 # PDF version
-[testenv:api-ref-pdf-docs]
+[testenv:permissions-pdf-docs]
 deps = -r{toxinidir}/doc/requirements.txt
 allowlist_externals =
   rm
@@ -92,13 +91,13 @@ allowlist_externals =
   bash
   cp
 commands =
-  rm -rf api-ref/build/pdf
-  sphinx-build -W --keep-going -b latex api-ref/source api-ref/build/pdf/
-  bash -c "for f in api-ref/build/pdf/*.gif; do convert $f $\{f/%gif/png\}; done || true"
-  bash -c "for f in api-ref/build/pdf/*.tex; do sed -iorig 's/\.gif//g' $f; done"
-  make -C api-ref/build/pdf
+  rm -rf doc/permissions/build/pdf
+  sphinx-build -W --keep-going -b latex doc/permissions/source doc/permissions/build/pdf/
+  bash -c "for f in doc/permissions/build/pdf/*.gif; do convert $f $\{f/%gif/png\}; done || true"
+  bash -c "for f in doc/permissions/build/pdf/*.tex; do sed -iorig 's/\.gif//g' $f; done"
+  make -C doc/permissions/build/pdf
   mkdir -p doc/build/pdf
-  cp api-ref/build/pdf/iam-api-ref.pdf doc/build/pdf/
+  cp doc/permissions/build/pdf/iam-permissions.pdf doc/build/pdf/
 
 
 # HTML version
@@ -144,6 +143,51 @@ commands =
   make -C umn/build/pdf
   mkdir -p doc/build/pdf
   cp umn/build/pdf/iam-umn.pdf doc/build/pdf/
+
+
+# HTML version
+[testenv:api-ref]
+deps = -r{toxinidir}/doc/requirements.txt
+allowlist_externals =
+  cp
+  mkdir
+commands =
+  sphinx-build -W --keep-going -b html api-ref/source doc/build/html/api-ref
+  mkdir -p api-ref/build/html
+  cp -av doc/build/html/api-ref api-ref/build/html
+
+# Json version (for search)
+[testenv:json-api-ref]
+deps = -r{toxinidir}/doc/requirements.txt
+allowlist_externals =
+  cp
+  mkdir
+  sh
+commands =
+  sphinx-build -W --keep-going -b json api-ref/source doc/build/json/api-ref
+  # Drop data useless for the search - wrap it also with sh/xargs due to bugs
+  # in tox
+  sh -c "find doc/build/json -type d -and '(' -name '_images' -or -name '_static' -or -name '_sources' ')' -print0 | xargs -0 rm -rf"
+  mkdir -p api-ref/build/json
+  cp -av doc/build/json/api-ref api-ref/build/json
+
+# PDF version
+[testenv:api-ref-pdf-docs]
+deps = -r{toxinidir}/doc/requirements.txt
+allowlist_externals =
+  rm
+  mkdir
+  make
+  bash
+  cp
+commands =
+  rm -rf api-ref/build/pdf
+  sphinx-build -W --keep-going -b latex api-ref/source api-ref/build/pdf/
+  bash -c "for f in api-ref/build/pdf/*.gif; do convert $f $\{f/%gif/png\}; done || true"
+  bash -c "for f in api-ref/build/pdf/*.tex; do sed -iorig 's/\.gif//g' $f; done"
+  make -C api-ref/build/pdf
+  mkdir -p doc/build/pdf
+  cp api-ref/build/pdf/iam-api-ref.pdf doc/build/pdf/
 
 
 # HTML version
