Update tox.ini && conf.py file
Performed-by: gitea/infra/otc-metadata/tools/generate_doc_confpy.py

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,9 @@ commands = {posargs}
 # This env is invoked in the periodic pipeline and is therefore responsible to
 # build all relevant docs at once.
 [testenv:docs]
-deps = -r{toxinidir}/doc/requirements.txt
+deps =
+  -r{toxinidir}/doc/requirements.txt
+  -c https://raw.githubusercontent.com/opentelekomcloud-docs/docs-constraints/main/constraints.txt
 allowlist_externals =
   mkdir
   cp
@@ -44,7 +46,7 @@ commands =
   {[testenv:json-mycredential]commands}
 
 [testenv:docs-pdf]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 allowlist_externals =
   rm
   mkdir
@@ -61,7 +63,7 @@ commands =
 
 # HTML version
 [testenv:permissions]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 allowlist_externals =
   cp
   mkdir
@@ -70,7 +72,7 @@ commands =
 
 # Json version (for search)
 [testenv:json-permissions]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 allowlist_externals =
   cp
   mkdir
@@ -83,7 +85,7 @@ commands =
 
 # PDF version
 [testenv:permissions-pdf-docs]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 allowlist_externals =
   rm
   mkdir
@@ -102,7 +104,7 @@ commands =
 
 # HTML version
 [testenv:umn]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 allowlist_externals =
   cp
   mkdir
@@ -113,7 +115,7 @@ commands =
 
 # Json version (for search)
 [testenv:json-umn]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 allowlist_externals =
   cp
   mkdir
@@ -128,7 +130,7 @@ commands =
 
 # PDF version
 [testenv:umn-pdf-docs]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 allowlist_externals =
   rm
   mkdir
@@ -147,7 +149,7 @@ commands =
 
 # HTML version
 [testenv:api-ref]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 allowlist_externals =
   cp
   mkdir
@@ -158,7 +160,7 @@ commands =
 
 # Json version (for search)
 [testenv:json-api-ref]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 allowlist_externals =
   cp
   mkdir
@@ -173,7 +175,7 @@ commands =
 
 # PDF version
 [testenv:api-ref-pdf-docs]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 allowlist_externals =
   rm
   mkdir
@@ -192,7 +194,7 @@ commands =
 
 # HTML version
 [testenv:mycredential]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 allowlist_externals =
   cp
   mkdir
@@ -201,7 +203,7 @@ commands =
 
 # Json version (for search)
 [testenv:json-mycredential]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 allowlist_externals =
   cp
   mkdir
@@ -214,7 +216,7 @@ commands =
 
 # PDF version
 [testenv:mycredential-pdf-docs]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 allowlist_externals =
   rm
   mkdir
