--- a/tox.ini
+++ b/tox.ini
@@ -39,18 +39,18 @@ commands =
   rm -rf doc/build/html doc/build/html_temp doc/build/doctrees
   sphinx-build -a -E -W -d doc/build/doctrees -b html doc/source doc/build/html_temp
   sphinx-minify --input-directory doc/build/html_temp/ --output-directory doc/build/html
-  {[testenv:best-practice]commands}
-  {[testenv:json-best-practice]commands}
-  {[testenv:mycredential]commands}
-  {[testenv:json-mycredential]commands}
   {[testenv:umn]commands}
   {[testenv:json-umn]commands}
-  {[testenv:permissions]commands}
-  {[testenv:json-permissions]commands}
+  {[testenv:best-practice]commands}
+  {[testenv:json-best-practice]commands}
   {[testenv:api-ref]commands}
   {[testenv:json-api-ref]commands}
+  {[testenv:mycredential]commands}
+  {[testenv:json-mycredential]commands}
+  {[testenv:permissions]commands}
+  {[testenv:json-permissions]commands}
 
-[testenv:docs-pdf]
+[testenv:pdf-docs]
 deps =
   {[testenv:docs]deps}
   {[testenv:bindeps]deps}
@@ -68,105 +68,11 @@ commands =
   wget -O {toxinidir}/_templates/longtable.tex.jinja https://gitea.eco.tsi-dev.otc-service.com/infra/docs-templates/raw/branch/main/templates/longtable.tex.jinja
   wget -O {toxinidir}/_templates/tabular.tex.jinja https://gitea.eco.tsi-dev.otc-service.com/infra/docs-templates/raw/branch/main/templates/tabular.tex.jinja
   wget -O {toxinidir}/_templates/tabulary.tex.jinja https://gitea.eco.tsi-dev.otc-service.com/infra/docs-templates/raw/branch/main/templates/tabulary.tex.jinja
-  {[testenv:best-practice-pdf-docs]commands}
-  {[testenv:mycredential-pdf-docs]commands}
   {[testenv:umn-pdf-docs]commands}
-  {[testenv:permissions-pdf-docs]commands}
+  {[testenv:best-practice-pdf-docs]commands}
   {[testenv:api-ref-pdf-docs]commands}
-
-
-# HTML version
-[testenv:best-practice]
-deps = {[testenv:docs]deps}
-allowlist_externals =
-  cp
-  mkdir
-commands =
-  sphinx-build -W --keep-going -b html doc/best-practice/source doc/build/html_temp/best-practice
-  sphinx-minify --input-directory doc/build/html_temp/best-practice --output-directory doc/build/html/best-practice
-  mkdir -p best-practice/build/html
-  cp -av doc/build/html/best-practice best-practice/build/html
-
-# Json version (for search)
-[testenv:json-best-practice]
-deps = {[testenv:docs]deps}
-allowlist_externals =
-  cp
-  mkdir
-  sh
-commands =
-  sphinx-build -W --keep-going -b json doc/best-practice/source doc/build/json/best-practice
-  # Drop data useless for the search - wrap it also with sh/xargs due to bugs
-  # in tox
-  sh -c "find doc/build/json -type d -and '(' -name '_images' -or -name '_static' -or -name '_sources' ')' -print0 | xargs -0 rm -rf"
-  mkdir -p best-practice/build/json
-  cp -av doc/build/json/best-practice best-practice/build/json
-
-# PDF version
-[testenv:best-practice-pdf-docs]
-deps = {[testenv:docs]deps}
-allowlist_externals =
-  rm
-  mkdir
-  make
-  bash
-  cp
-commands =
-  rm -rf doc/best-practice/build/pdf
-  cp -r {toxinidir}/_templates doc/best-practice/source/_templates/
-  sphinx-build -W --keep-going -b latex doc/best-practice/source doc/best-practice/build/pdf/
-  bash -c "for f in doc/best-practice/build/pdf/*.gif; do convert $f $\{f/%gif/png\}; done || true"
-  bash -c "for f in doc/best-practice/build/pdf/*.tex; do sed -iorig 's/\.gif//g' $f; done"
-  make -C doc/best-practice/build/pdf
-  mkdir -p doc/build/pdf
-  cp doc/best-practice/build/pdf/iam-best-practice.pdf doc/build/pdf/
-
-
-# HTML version
-[testenv:mycredential]
-deps = {[testenv:docs]deps}
-allowlist_externals =
-  cp
-  mkdir
-commands =
-  sphinx-build -W --keep-going -b html doc/mycredential/source doc/build/html_temp/mycredential
-  sphinx-minify --input-directory doc/build/html_temp/mycredential --output-directory doc/build/html/mycredential
-  mkdir -p mycredential/build/html
-  cp -av doc/build/html/mycredential mycredential/build/html
-
-# Json version (for search)
-[testenv:json-mycredential]
-deps = {[testenv:docs]deps}
-allowlist_externals =
-  cp
-  mkdir
-  sh
-commands =
-  sphinx-build -W --keep-going -b json doc/mycredential/source doc/build/json/mycredential
-  # Drop data useless for the search - wrap it also with sh/xargs due to bugs
-  # in tox
-  sh -c "find doc/build/json -type d -and '(' -name '_images' -or -name '_static' -or -name '_sources' ')' -print0 | xargs -0 rm -rf"
-  mkdir -p mycredential/build/json
-  cp -av doc/build/json/mycredential mycredential/build/json
-
-# PDF version
-[testenv:mycredential-pdf-docs]
-deps = {[testenv:docs]deps}
-allowlist_externals =
-  rm
-  mkdir
-  make
-  bash
-  cp
-commands =
-  rm -rf doc/mycredential/build/pdf
-  cp -r {toxinidir}/_templates doc/mycredential/source/_templates/
-  sphinx-build -W --keep-going -b latex doc/mycredential/source doc/mycredential/build/pdf/
-  bash -c "for f in doc/mycredential/build/pdf/*.gif; do convert $f $\{f/%gif/png\}; done || true"
-  bash -c "for f in doc/mycredential/build/pdf/*.tex; do sed -iorig 's/\.gif//g' $f; done"
-  make -C doc/mycredential/build/pdf
-  mkdir -p doc/build/pdf
-  cp doc/mycredential/build/pdf/iam-mycredential-guide.pdf doc/build/pdf/
+  {[testenv:mycredential-pdf-docs]commands}
+  {[testenv:permissions-pdf-docs]commands}
 
 
 # HTML version
@@ -217,34 +123,34 @@ commands =
 
 
 # HTML version
-[testenv:permissions]
+[testenv:best-practice]
 deps = {[testenv:docs]deps}
 allowlist_externals =
   cp
   mkdir
 commands =
-  sphinx-build -W --keep-going -b html doc/permissions/source doc/build/html_temp/permissions
-  sphinx-minify --input-directory doc/build/html_temp/permissions --output-directory doc/build/html/permissions
-  mkdir -p permissions/build/html
-  cp -av doc/build/html/permissions permissions/build/html
+  sphinx-build -W --keep-going -b html doc/best-practice/source doc/build/html_temp/best-practice
+  sphinx-minify --input-directory doc/build/html_temp/best-practice --output-directory doc/build/html/best-practice
+  mkdir -p best-practice/build/html
+  cp -av doc/build/html/best-practice best-practice/build/html
 
 # Json version (for search)
-[testenv:json-permissions]
+[testenv:json-best-practice]
 deps = {[testenv:docs]deps}
 allowlist_externals =
   cp
   mkdir
   sh
 commands =
-  sphinx-build -W --keep-going -b json doc/permissions/source doc/build/json/permissions
+  sphinx-build -W --keep-going -b json doc/best-practice/source doc/build/json/best-practice
   # Drop data useless for the search - wrap it also with sh/xargs due to bugs
   # in tox
   sh -c "find doc/build/json -type d -and '(' -name '_images' -or -name '_static' -or -name '_sources' ')' -print0 | xargs -0 rm -rf"
-  mkdir -p permissions/build/json
-  cp -av doc/build/json/permissions permissions/build/json
+  mkdir -p best-practice/build/json
+  cp -av doc/build/json/best-practice best-practice/build/json
 
 # PDF version
-[testenv:permissions-pdf-docs]
+[testenv:best-practice-pdf-docs]
 deps = {[testenv:docs]deps}
 allowlist_externals =
   rm
@@ -253,14 +159,14 @@ allowlist_externals =
   bash
   cp
 commands =
-  rm -rf doc/permissions/build/pdf
-  cp -r {toxinidir}/_templates doc/permissions/source/_templates/
-  sphinx-build -W --keep-going -b latex doc/permissions/source doc/permissions/build/pdf/
-  bash -c "for f in doc/permissions/build/pdf/*.gif; do convert $f $\{f/%gif/png\}; done || true"
-  bash -c "for f in doc/permissions/build/pdf/*.tex; do sed -iorig 's/\.gif//g' $f; done"
-  make -C doc/permissions/build/pdf
+  rm -rf doc/best-practice/build/pdf
+  cp -r {toxinidir}/_templates doc/best-practice/source/_templates/
+  sphinx-build -W --keep-going -b latex doc/best-practice/source doc/best-practice/build/pdf/
+  bash -c "for f in doc/best-practice/build/pdf/*.gif; do convert $f $\{f/%gif/png\}; done || true"
+  bash -c "for f in doc/best-practice/build/pdf/*.tex; do sed -iorig 's/\.gif//g' $f; done"
+  make -C doc/best-practice/build/pdf
   mkdir -p doc/build/pdf
-  cp doc/permissions/build/pdf/iam-permissions.pdf doc/build/pdf/
+  cp doc/best-practice/build/pdf/iam-best-practice.pdf doc/build/pdf/
 
 
 # HTML version
@@ -308,6 +214,100 @@ commands =
   make -C api-ref/build/pdf
   mkdir -p doc/build/pdf
   cp api-ref/build/pdf/iam-api-ref.pdf doc/build/pdf/
+
+
+# HTML version
+[testenv:mycredential]
+deps = {[testenv:docs]deps}
+allowlist_externals =
+  cp
+  mkdir
+commands =
+  sphinx-build -W --keep-going -b html doc/mycredential/source doc/build/html_temp/mycredential
+  sphinx-minify --input-directory doc/build/html_temp/mycredential --output-directory doc/build/html/mycredential
+  mkdir -p mycredential/build/html
+  cp -av doc/build/html/mycredential mycredential/build/html
+
+# Json version (for search)
+[testenv:json-mycredential]
+deps = {[testenv:docs]deps}
+allowlist_externals =
+  cp
+  mkdir
+  sh
+commands =
+  sphinx-build -W --keep-going -b json doc/mycredential/source doc/build/json/mycredential
+  # Drop data useless for the search - wrap it also with sh/xargs due to bugs
+  # in tox
+  sh -c "find doc/build/json -type d -and '(' -name '_images' -or -name '_static' -or -name '_sources' ')' -print0 | xargs -0 rm -rf"
+  mkdir -p mycredential/build/json
+  cp -av doc/build/json/mycredential mycredential/build/json
+
+# PDF version
+[testenv:mycredential-pdf-docs]
+deps = {[testenv:docs]deps}
+allowlist_externals =
+  rm
+  mkdir
+  make
+  bash
+  cp
+commands =
+  rm -rf doc/mycredential/build/pdf
+  cp -r {toxinidir}/_templates doc/mycredential/source/_templates/
+  sphinx-build -W --keep-going -b latex doc/mycredential/source doc/mycredential/build/pdf/
+  bash -c "for f in doc/mycredential/build/pdf/*.gif; do convert $f $\{f/%gif/png\}; done || true"
+  bash -c "for f in doc/mycredential/build/pdf/*.tex; do sed -iorig 's/\.gif//g' $f; done"
+  make -C doc/mycredential/build/pdf
+  mkdir -p doc/build/pdf
+  cp doc/mycredential/build/pdf/iam-mycredential.pdf doc/build/pdf/
+
+
+# HTML version
+[testenv:permissions]
+deps = {[testenv:docs]deps}
+allowlist_externals =
+  cp
+  mkdir
+commands =
+  sphinx-build -W --keep-going -b html doc/permissions/source doc/build/html_temp/permissions
+  sphinx-minify --input-directory doc/build/html_temp/permissions --output-directory doc/build/html/permissions
+  mkdir -p permissions/build/html
+  cp -av doc/build/html/permissions permissions/build/html
+
+# Json version (for search)
+[testenv:json-permissions]
+deps = {[testenv:docs]deps}
+allowlist_externals =
+  cp
+  mkdir
+  sh
+commands =
+  sphinx-build -W --keep-going -b json doc/permissions/source doc/build/json/permissions
+  # Drop data useless for the search - wrap it also with sh/xargs due to bugs
+  # in tox
+  sh -c "find doc/build/json -type d -and '(' -name '_images' -or -name '_static' -or -name '_sources' ')' -print0 | xargs -0 rm -rf"
+  mkdir -p permissions/build/json
+  cp -av doc/build/json/permissions permissions/build/json
+
+# PDF version
+[testenv:permissions-pdf-docs]
+deps = {[testenv:docs]deps}
+allowlist_externals =
+  rm
+  mkdir
+  make
+  bash
+  cp
+commands =
+  rm -rf doc/permissions/build/pdf
+  cp -r {toxinidir}/_templates doc/permissions/source/_templates/
+  sphinx-build -W --keep-going -b latex doc/permissions/source doc/permissions/build/pdf/
+  bash -c "for f in doc/permissions/build/pdf/*.gif; do convert $f $\{f/%gif/png\}; done || true"
+  bash -c "for f in doc/permissions/build/pdf/*.tex; do sed -iorig 's/\.gif//g' $f; done"
+  make -C doc/permissions/build/pdf
+  mkdir -p doc/build/pdf
+  cp doc/permissions/build/pdf/iam-permissions.pdf doc/build/pdf/
 
 
 
