--- a/zuul.yaml
+++ b/zuul.yaml
@@ -4,6 +4,13 @@
     default-branch: main
     templates:
       - helpcenter-base-jobs
+    vars:
+      sphinx_pdf_files:
+        - iam-umn.pdf
+        - iam-best-practice.pdf
+        - iam-api-ref.pdf
+        - iam-mycredential.pdf
+        - iam-permissions.pdf
     check:
       jobs:
         - noop
